// $Id: CHANGELOG.txt,v 1.14.2.9 2007/10/23 16:29:49 morbus Exp $

Bot 5.x-1.0, 2007-??-??
-----------------------
 * bot_project now has configurable project.module scraping.
 * bot_project can now define URL endpoints per api branch.
 * bot_drupal renamed to bot_project, made much more generic.
 * bot: supports server passwords and channel keys, thanks to Bdragon.
 * bot_drupal: better handling of improper Doxygen summaries.
 * bot_drupal from Bdragon: integrate with api.module.
 * bot_factoid.module added; an infobot clone with all the fixins.
 * hook_irc_bot_cron() now exists and runs every five minutes.
 * #136856 and #136870 from Shiny: various PostgreSQL quote fixes.
 * bot_seen: now properly reports when it hasn't seen something.
 * bot_seen: now supports wildcard searches with * (three char minimum).
 * bot_seen: freeform "seen?" syntax is moved to direct addressing only.
 * hook_irc_bot_reply() exists to facilitate logging of own messages.
 * Issue metadata and IRC count per suggestions by ChrisKennedy.
 * bot_drupal: "Bot Drupal URLs" renamed to just "Drupal URLs".
 * bot: bot/ URL now exists and displays connection/feature details.
 * bot_agotchi: greeting and thankful responses added, user configurable.
 * bot_agotchi: variable substitution is now possible in responses.
 * bot_drupal: popular URLs are now constrained to last 14 days.
 * bot_start: fixed error where SCRIPT_NAME was not being set properly.
 * bot_drupal: now shows page of popular/recent URLs at bot/drupal_urls.
 * bot_drupal: now stores the retrieved title in the database.
 * bot_agotchi.module added; botsnacks, greetings, personality.
 * bot_drupal: URLs are remembered and counted in the database now.
 * Shipped plugins moved to their own directories for less clutter.
 * Help interface added; module developers, please see README.txt.
 * bot_drupal.module added; Drupal developer helper.
 * Removed layer of abstraction from the hook system.