@@ -1,7 +1,8 @@
-// $Id: CHANGELOG.txt,v 1.14.2.9 2007/10/23 16:29:49 morbus Exp $
+// $Id: CHANGELOG.txt,v 1.14.2.10 2007/10/23 17:13:19 morbus Exp $
 
 Bot 5.x-1.0, 2007-??-??
 -----------------------
+ * added another MySQL timeout preventer, thanks to killes.
  * bot_project now has configurable project.module scraping.
  * bot_project can now define URL endpoints per api branch.
  * bot_drupal renamed to bot_project, made much more generic.
